--- a/pets/app/src/main/res/layout/fragment_calendar.xml
+++ b/pets/app/src/main/res/layout/fragment_calendar.xml
@@ -67,6 +67,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="1 Марта 2021"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/eventsRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/currentSelectDateTextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingButton"
         android:layout_width="wrap_content"
